[package]
name = "feature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.30"
anyhow = "1.0.63"
bech32 = "0.8.1"
log = "0.4.6"
reqwest = { version = "0.11", features = ["json", "blocking"] }
secp256k1 = { version = "0.29.0", features = ["recovery"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
futures = "0.3"
jsonrpc-core = "18"
parking_lot = "0.12"
lru = "0.7.1"
dashmap = "5.4"

ckb-types = "=0.117.0"
ckb-dao-utils = "=0.117.0"
ckb-traits = "=0.117.0"
ckb-jsonrpc-types = "=0.117.0"
ckb-hash = "=0.117.0"
ckb-resource = "=0.117.0"
ckb-crypto = { version = "=0.117.0", features = ["secp"] }
ckb-script = { version = "=0.117.0" }
ckb-sdk = { version = "3.3.0", features = ["native-tls-vendored"] }
ckb-logger = "=0.117.0"
bitflags = "1.3.2"
sha3 = "0.10.1"
enum-repr-derive = "0.2.0"

# for feature test
rand = { version = "0.8.5", optional = true }
ckb-mock-tx-types = { version = "0.117.0" }
ckb-chain-spec = { version = "=0.117.0", optional = true }

sparse-merkle-tree = "0.6.1"
lazy_static = "1.3.0"
rstest = "0.7.0"

[features]
default = []
test = []

[dev-dependencies]
clap = { version = "4.1.8", features = ["derive"] }
httpmock = "0.6"
async-global-executor = "2.3.1"
hex = "0.4"
